--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.css
@@ -60,7 +60,7 @@ h1.title {
 }
 
 ol.breadcrumb, li.breadcrumb-item {
-    background-color: #fff;
+    background-color: transparent;
     font-size: 18px;
 }
 
