--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
@@ -102,6 +102,10 @@ h2.card-sec-title {
     padding: 2em;
 }
 
+.card.bg-transparent {
+    border-radius: 0;
+}
+
 a.btn.btn-warning.btn-lg {
     background-color: #F47700;
     color: #fff;
