--- a/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-edit/admin-press-release-edit.component.html
@@ -42,7 +42,7 @@
 
                     <div class="form-group">
                         <label>Meta Descripton <br>
-                            <small>If blank meta will use site default (Not recommended)</small>
+                            <small>If blank, meta will use site default (Not recommended)</small>
                         </label>
                         <textarea type="text"
                                   class="form-control"
