--- a/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
+++ b/src/app/components/admin/admin-press-release/admin-press-release-new/admin-press-release-new.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PRESS-RELEASES-NEW * -->
-<div class="row mb-4 mt-5">
+<div class="row mb-4 mt-5 text-right">
     <div class="container">
         <div class="col-md-12">
             <a class="btn btn-default"
@@ -34,7 +34,7 @@
 
                     <div class="form-group">
                         <label>Meta Descripton <br>
-                            <small>If blank meta will use site default (Not recommended)</small>
+                            <small>If blank, meta will use site default (Not recommended)</small>
                         </label>
                         <textarea type="text"
                                   class="form-control"
