--- a/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
+++ b/src/app/components/admin/admin-calendar/admin-calendar-item/admin-calendar-item.component.html
@@ -59,7 +59,10 @@
                  aria-labelledby="date1-tab">
                 <h4 class="pt-5 pb-5 mb-3 pl-3"
                     *ngIf="calendar.date1 && calendar.body1">
-                    <b>{{ calendar.date1.toDate() | date:'EEEE' }},</b> {{ calendar.date1.toDate() | date }}
+                    <strong>{{ calendar.date1.toDate() | date:'EEEE' }}</strong>,
+                    {{ month }}
+                    {{ calendar.date1.toDate() | date:"dd" }},
+                    {{ calendar.date1.toDate() | date:"yyyy" }}
                 </h4>
                 <div [innerHTML]="calendar.body1 | safeHtml" class="cal-content"></div>
             </div>
@@ -69,7 +72,10 @@
                  aria-labelledby="date2-tab">
                 <h4 class="pt-5 pb-5 mb-3 pl-3"
                     *ngIf="calendar.date2 && calendar.body2">
-                    <b>{{ calendar.date2.toDate() | date:'EEEE' }},</b> {{ calendar.date2.toDate() | date }}
+                    <strong>{{ calendar.date1.toDate() | date:'EEEE' }}</strong>,
+                    {{ month2 }}
+                    {{ calendar.date2.toDate() | date:"dd" }},
+                    {{ calendar.date2.toDate() | date:"yyyy" }}
                 </h4>
                 <div [innerHTML]="calendar.body2 | safeHtml" class="cal-content"></div>
             </div>
@@ -79,7 +85,10 @@
                  aria-labelledby="date3-tab">
                 <h4 class="pt-5 pb-5 mb-3 pl-3"
                     *ngIf="calendar.date3 && calendar.body3">
-                    <b>{{ calendar.date3.toDate() | date:'EEEE' }},</b> {{ calendar.date3.toDate() | date }}
+                    <strong>{{ calendar.date3.toDate() | date:'EEEE' }}</strong>,
+                    {{ month3 }}
+                    {{ calendar.date3.toDate() | date:"dd" }},
+                    {{ calendar.date3.toDate() | date:"yyyy" }}
                 </h4>
                 <div [innerHTML]="calendar.body3 | safeHtml" class="cal-content"></div>
             </div>
@@ -89,7 +98,10 @@
                  aria-labelledby="date4-tab">
                 <h4 class="pt-5 pb-5 mb-3 pl-3"
                     *ngIf="calendar.date4 && calendar.body4">
-                    <b>{{ calendar.date4.toDate() | date:'EEEE' }},</b> {{ calendar.date4.toDate() | date }}
+                    <strong>{{ calendar.date1.toDate() | date:'EEEE' }}</strong>,
+                    {{ month4 }}
+                    {{ calendar.date4.toDate() | date:"dd" }},
+                    {{ calendar.date4.toDate() | date:"yyyy" }}
                 </h4>
                 <div [innerHTML]="calendar.body4 | safeHtml" class="cal-content"></div>
             </div>
