--- a/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
+++ b/src/app/components/admin/admin-page/admin-page-details/admin-page-details.component.html
@@ -3,11 +3,11 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
 <!-- * Edit Options Sub-Navbar * -->
-<div class="row mb-4">
+<div class="row">
     <div class="container">
         <!-- * Edit Navbar Panel * -->
         <div class="col-sm-12">
-            <nav class="navbar navbar-expand-lg fixed-top text-light" style="background-color: #1C202B;" *ngIf="page">
+            <nav class="navbar navbar-expand-lg fixed-bottom text-light" style="background-color: #1C202B;" *ngIf="page">
                 <a class="navbar-brand" href="#">
                     <img src="https://s3.amazonaws.com/DDW/ddw-org/images/logos/gray-ddw-150.png" width="100"
                          class="d-inline-block align-top" alt="DDW">
@@ -18,14 +18,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <i class="fa fa-dot-circle"></i> {{ page.title }}
+                        <li class="nav-item text-capitalize">
+                            <i class="fa fa-h1"></i> {{ page.title }}
                         </li>
-                        <li class="nav-item">
-                            <i class="fa fa-user"></i> {{ page.author }}
-                        </li>
-                        <li class="nav-item ">
-                            <i class="fa fa-tags"></i> {{ page.category }}
+                        <!--<li class="nav-item">-->
+                            <!--<i class="fa fa-user"></i> {{ page.author }}-->
+                        <!--</li>-->
+                        <li class="nav-item text-capitalize">
+                            <i class="fa fa-project-diagram"></i> {{ page.category }}
                         </li>
                     </ul>
                     <form class="form-inline mx-auto">
@@ -75,7 +75,7 @@
                     <div class="text-capitalize text-decoration-none">{{ page.category }}</div>
                 </li>
                 <li class="breadcrumb-item text-capitalize" *ngIf="page.isGrandchildPage">{{page.grandchildURL}}</li>
-                <li class="breadcrumb-item active">{{page.title}}</li>
+                <li class="breadcrumb-item active text-capitalize">{{page.title}}</li>
             </ol>
         </div>
     </div>
