--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.css
@@ -2,6 +2,7 @@ table, tr, th, td {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
     font-size: 14px !important;
 }
+
 th {
     font-size: 14px !important;
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
@@ -16,6 +17,10 @@ img.page-image {
     max-width: 25px;
 }
 
+.card.bg-transparent {
+    border-radius: 0;
+}
+
 a.page-link {
     font-size: 14px !important;
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
@@ -27,6 +32,7 @@ a.page-link {
     .card-columns {
         columns: 1;
     }
+
     .card {
         width: 100%;
     }
