--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -15,8 +15,8 @@
 </div>
 <div class="container mt-2">
     <div class="row">
-        <div class="col-lg-4 offset-lg-8">
-            <div class="card bg-light text-light text-center">
+        <div class="col-md-3 offset-md-9">
+            <div class="card bg-transparent text-light text-center">
                 <div class="card-body p-3">
                     <label class="switcher switcher-md">
                         <input type="checkbox" class="switcher-input">
