--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-PAGE-NEW * -->
-<div class="row mb-4 mt-3">
+<div class="row mb-4 mt-3 text-right">
     <div class="container">
         <div class="col-md-12">
             <a class="btn btn-default"
@@ -38,7 +38,7 @@
 
                     <div class="form-group">
                         <label>Meta Descripton <br>
-                            <small>If blank meta will use site default (Not recommended)</small>
+                            <small>If blank, meta will use site default (Not recommended)</small>
                         </label>
                         <textarea type="text"
                                   class="form-control"
