--- a/src/app/components/admin/admin-core/admin-bottom-sheet-new/admin-bottom-sheet-new.component.html
+++ b/src/app/components/admin/admin-core/admin-bottom-sheet-new/admin-bottom-sheet-new.component.html
@@ -30,6 +30,14 @@
         </a>
     </li>
 
+    <li class="list-group-item">
+        <mat-divider></mat-divider>
+        <a [routerLink]="['/admin/image-uploader']"
+           (click)="openLink($event)">
+            <i class="fal fa-images"></i> New Image
+        </a>
+    </li>
+
     <li class="list-group-item" *ngIf="isAdmin">
         <mat-divider></mat-divider>
         <a [routerLink]="['/admin/users/new']"
