Added custom nav links to both navbars. Custom nav links are now a fully working CRUD operation

--- a/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.css
+++ b/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.css
@@ -1,3 +1,7 @@
+p.card-text {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 1em;
+}
 
 hr.inset-hr {
     border: 0;
