--- a/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
+++ b/src/app/components/admin/admin-custom-nav-link/admin-custom-nav-link-edit/admin-custom-nav-link-edit.component.html
@@ -53,6 +53,12 @@
                 <div class="col-sm-12">
                     <div class="card bg-lighter p-3 inner-card">
                         <div class="card-body">
+                            <p class="card-text helv">
+                                Links appear in order from left-to-right, 1-5. If blank, no link will appear.
+                            </p>
+                            <div class="form-group">
+                                <hr class="inset-hr"/>
+                            </div>
                             <form [formGroup]="customLinkForm"
                                   (ngSubmit)="onUpdateCustomLinks(customLinkForm.value)"
                                   *ngIf="customLink; else loading">
@@ -302,17 +308,14 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <hr class="inset-hr"/>
-                                </div>
 
 
                                 <!-- * Button * -->
-                                <div class="form-group">
-                                    <button class="btn btn-secondary"
+                                <div class="form-group mt-5">
+                                    <button class="btn btn-secondary full-width"
                                             type="submit">
                                         <i class="fa fa-link"></i>&nbsp;
-                                        Update Custom Links
+                                        Update Navbar Custom Links
                                     </button>
                                 </div>
                             </form>
