--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -141,7 +141,7 @@
     <li class="sidenav-item" *ngIf="isLoggedIn">
         <a [routerLink]="['/admin/custom-nav-links']" class="sidenav-link">
             <i class="sidenav-icon ion ion-md-quote"></i>
-            <div><i class="fal fa-link"></i>&nbsp;<span class="helv">Nav Links</span></div>
+            <div><i class="fal fa-link"></i>&nbsp;<span class="helv">Navbar Links</span></div>
         </a>
     </li>
 
