Fixed banner issue on contact page

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -108,8 +108,7 @@
                                    [class.invalid]="!f.extURL.valid && f.extURL.touched"
                                    placeholder="https://"
                                    formControlName="extURL">
-                            <p class="help-block alert alert-warning text-center mt-1"
-                               *ngIf="!f.extURL.valid && f.extURL.touched">
+                            <p class="help-block alert alert-warning text-center mt-1">
                                 <b>External URL</b> is invalid!
                             </p>
                         </div>
