--- a/src/app/components/core/contact-us/contact-us.component.html
+++ b/src/app/components/core/contact-us/contact-us.component.html
@@ -1,5 +1,5 @@
 <ddw-pages-navbar></ddw-pages-navbar>
-<img src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/interior-bg.jpg"
+<img [src]="bannerImage"
      class="bannerPhotoURL">
 <div class="container">
     <h1 class="title">Contact Us</h1>
