--- a/src/styles.css
+++ b/src/styles.css
@@ -90,6 +90,7 @@ p.alert, .flash-messages * {
 }
 
 input[type=text],
+input[type=url],
 input[type=textarea],
 input[type=email],
 input[type=date],
